commit to 'main'

--- a/styles.css
+++ b/styles.css
@@ -56,14 +56,17 @@ a:hover {
 /* projects section */
 
 .projects {
-	padding-top: 5%;
+	max-width: 750px;
+	margin: 0 auto;
+	justify-content: center;
+	padding: 5% 0 10% 0;
 	display: block;
 	text-align: center;
 }
 
 .projects a {
 	display: block;
-	padding: 10px 0;
+	padding: 1% 0;
 	font-size: 96px;
 	z-index: 3;
 }
@@ -126,7 +129,7 @@ a:hover img {
 	display: block;
 	max-width: 915px;
 	margin: 0 auto;
-	padding: 200px 0 25px 0;
+	padding: 8% 0 5% 0;
 }
 
 h1 {
